--- a/index.html
+++ b/index.html
@@ -10,55 +10,69 @@
 		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
-		<section class="todoapp">
+		<section class="todoapp" id="app">
 			<header class="header">
 				<h1>todos</h1>
-				<input class="new-todo" placeholder="What needs to be done?" autofocus>
+				<input class="new-todo"
+				@keydown.enter="handleNewKeyDown"	
+				placeholder="What needs to be done?" autofocus>
 			</header>
 			<!-- This section should be hidden by default and shown when there are todos -->
-			<section class="main">
-				<input id="toggle-all" class="toggle-all" type="checkbox">
-				<label for="toggle-all">Mark all as complete</label>
-				<ul class="todo-list">
-					<!-- These are here just to show the structure of the list items -->
-					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
-					<li class="completed">
-						<div class="view">
-							<input class="toggle" type="checkbox" checked>
-							<label>Taste JavaScript</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Create a TodoMVC template">
-					</li>
-					<li>
-						<div class="view">
-							<input class="toggle" type="checkbox">
-							<label>Buy a unicorn</label>
-							<button class="destroy"></button>
-						</div>
-						<input class="edit" value="Rule the web">
-					</li>
-				</ul>
-			</section>
-			<!-- This footer should hidden by default and shown when there are todos -->
-			<footer class="footer">
-				<!-- This should be `0 items left` by default -->
-				<span class="todo-count"><strong>0</strong> item left</span>
-				<!-- Remove this if you don't implement routing -->
-				<ul class="filters">
-					<li>
-						<a class="selected" href="#/">All</a>
-					</li>
-					<li>
-						<a href="#/active">Active</a>
-					</li>
-					<li>
-						<a href="#/completed">Completed</a>
-					</li>
-				</ul>
-				<!-- Hidden if no completed items are left ↓ -->
-				<button class="clear-completed">Clear completed</button>
-			</footer>
+			<template v-if="todos.length">
+				<section class="main">
+					<input 
+					@change="handleToggleAllChange"
+					id="toggle-all" class="toggle-all" type="checkbox">
+					<label for="toggle-all">Mark all as complete</label>
+					<ul class="todo-list">
+						<!-- These are here just to show the structure of the list items -->
+						<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
+						<li 
+						:class="{completed:item.completed,
+						editing:currentEditing===item}"
+						v-for="(item,index) in todos">
+							<div class="view">
+								<input class="toggle" 
+								v-model="item.completed"
+								type="checkbox">
+								<label
+								@dblclick="handleGetDblclick(item)"
+								>{{ item.title }}</label>
+								<button 
+								@click="handleRemoveTodo(index,$event)"
+								class="destroy"></button>
+							</div>
+							<input class="edit" :value="item.title"
+							@keydown.enter="(handleSaveEideKeyDown(item,index,$event))"
+							@keydown.esc="handleSaveEideKeyEsc"
+							@blur="(handleSaveEideKeyDown(item,index,$event))"
+							>
+						</li>
+					</ul>
+				</section>
+				<!-- This footer should hidden by default and shown when there are todos -->
+				<footer class="footer">
+					<!-- This should be `0 items left` by default -->
+					<span class="todo-count"><strong>0</strong> item left</span>
+					<!-- Remove this if you don't implement routing -->
+					<ul class="filters">
+						<li>
+							<a class="selected" href="#/">All</a>
+						</li>
+						<li>
+							<a href="#/active">Active</a>
+						</li>
+						<li>
+							<a href="#/completed">Completed</a>
+						</li>
+					</ul>
+					<!-- Hidden if no completed items are left ↓ -->
+					<button 
+					@click="handleClearAllDone"
+					v-if="todos.some(item => item.completed)"
+					class="clear-completed"> 清除所有小目标</button>
+				</footer>
+			</template>
 		</section>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
@@ -69,7 +83,8 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<!-- Scripts here. Don't remove ↓ -->
-		<script src="node_modules/todomvc-common/base.js"></script>
+		<!-- <script src="node_modules/todomvc-common/base.js"></script> -->
+		<script src="node_modules/vue/dist/vue.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
